<resources>
    <string name="app_name">RaceApp</string>
    <string name="app_developer">Race UP</string>
    <string name="races_title">Races</string>
    <string name="drawer_race_standings">Race standings</string>
    <string name="drawer_race_conditions">Race track conditions</string>
    <string name="telemetry_title">Telemetry</string>
    <string name="drawer_menu_real_time_data">Real-time data</string>
    <string name="drawer_menu_cached_data">Cached data</string>
    <string name="drawer_menu_alerts">Alerts</string>
    <string name="extra_title">More</string>
    <string name="action_webpage">Visit website</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="drawer_menu_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="main_content">Add a telemetry input source with the \'+\' button.</string>
    <string name="main_status_connection">Connection status</string>
    <string name="main_telemetry_source">Telemetry source</string>
    <string name="main_packet_lost">Packet loss</string>
    <string name="main_car_status">Car status</string>
    <string name="main_car_errors">Car errors</string>
    <string name="telemetry_choice_wifi">Wi-Fi</string>
    <string name="telemetry_choice_log_file">.csv log file</string>
    <string name="real_time_activity_title">Real-time data</string>
    <string name="real_time_telemetry_fragment_tyres">Tyres info</string>
    <string name="real_time_telemetry_fragment_tyres_content">Some tyres</string>
    <string name="real_time_telemetry_fragment_throttle">Throttle, brake and steering</string>
    <string name="real_time_telemetry_fragment_throttle_content">Some info</string>
    <string name="real_time_telemetry_fragment_temperatures">Current temperatures</string>
    <string name="real_time_telemetry_fragment_temperatures_content">Some temperatures</string>
    <string name="real_time_telemetry_fragment_temperatures_engine_title">Engines (°C)</string>
    <string name="real_time_telemetry_fragment_temperatures_engine_0_label">Engine 0</string>
    <string name="real_time_telemetry_fragment_temperatures_engine_1_label">Engine 1</string>
    <string name="real_time_telemetry_fragment_temperatures_tyres_title">Tyres (°C)</string>
    <string name="title_activity_settings">Settings</string>
    <string name="eleonora">Eleonora Venturini</string>
    <string name="eleonora_spa">Venturini S.R.L</string>
    <string name="eleonora_age">22 years</string>
    <string name="eleonora_email">ele.venturini@venturinisrl.it</string>
    <string name="eleonora_career_record_monza">ACI Vallelunga Circuit - 1:47.020 (2nd)</string>
    <string name="eleonora_career_record_spa">Autodromo di Franciacorta - 2:17.020 (4th)</string>
    <string name="jacopo">Jacopo Pregnolato</string>
    <string name="jacopo_spa">Pregnolato S.P.A</string>
    <string name="jacopo_age">20 years</string>
    <string name="jacopo_email">jac.pregnolato@pregnolatospa.it</string>
    <string name="jacopo_career_record_monza">Adria International Raceway - 1:39.122 (1st)</string>
    <string name="jacopo_career_record_spa">Pista Azzurra - 1:59.280 (2nd)</string>
    <string name="cached_data_activity_title">Cached data</string>
    <string name="cached_data_telemetry_fragment_img_save">Save chart to file</string>
    <string name="export_graph_export_true">Screenshot saved to gallery</string>
    <string name="export_graph_export_false">Error saving screenshot to gallery</string>
    <string name="cached_data_telemetry_fragment_tyres_speeds">Tyres speeds</string>
    <string name="cached_data_telemetry_fragment_tyres_speeds_chart_title">Tyres speeds (m/s) chart</string>
    <string name="cached_data_telemetry_fragment_tyres_temperatures">Tyres temperatures</string>
    <string name="cached_data_telemetry_fragment_tyres_temperatures_chart_title">Tyres temperatures (°C) chart</string>
    <string name="cached_data_telemetry_fragment_accelerations">Accelerations</string>
    <string name="cached_data_telemetry_fragment_accelerations_chart_title">Car accelerations X, Y (m/s²) and yaw rate (°/s) chart</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
                based on your message history
            </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Chiara Vettel</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="dnf">DNF</string>
    <string name="throttle_brake">Throttle/brake</string>
    <string name="brakes">Front/rear brakes pressure (bar)</string>
    <string name="front_brake">Front brake</string>
    <string name="rear_brake">Rear brake</string>
    <string name="steering_wheel_angle">Steering wheel angle</string>
    <string name="fl_tyre">Front left</string>
    <string name="fr_tyre">Front right</string>
    <string name="rl_tyre">Rear left</string>
    <string name="rr_tyre">Rear right</string>
    <string name="tyre_labels">Tyre values</string>
    <string name="tyre_suspension_label">Suspension (mm)</string>
    <string name="tyre_speed_label">Speed (m/s)</string>
    <string name="tyre_water_block_label">Water block (°C)</string>
    <string name="tyre_ti_label">TI (°C)</string>
    <string name="tyre_temperature_label">Temperature (°C)</string>
    <string name="title_activity_alerts">Alerts</string>
    <string name="title_activity_race_standings">Race standings</string>
    <string name="recent_played">Suggested players</string>
    <string name="not_connected">Not connected</string>
    <string name="packet_loss_rate">5.6%</string>
    <string name="good_car_status">Good</string>
    <string name="car_errors">16</string>
    <string name="nav_profile_title">User</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="action_community">Community</string>
    <string name="action_training">Training arena</string>
</resources>