<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="200dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="it.raceup.raceapp.activity.CommunityActivity"
    tools:showIn="@layout/activity_community">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="@dimen/appbar_padding_top">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/recent_played"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#212121" />

        <android.support.v7.widget.CardView
            android:id="@+id/card_eleonora"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:padding="6dip">

                <LinearLayout
                    android:id="@+id/subject0"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eleonora"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eleonora_spa" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/icon0"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="104dp"
                    android:layout_marginStart="104dp"
                    android:layout_toEndOf="@+id/subject0"
                    android:layout_toRightOf="@+id/subject0"
                    android:src="@drawable/eleonoramilesi" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_jacopo"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_horizontal_margin"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:padding="6dip">

                <LinearLayout
                    android:id="@+id/subject1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_marginEnd="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jacopo"
                        android:textSize="@dimen/text_medium"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jacopo_spa" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/icon1"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="77dp"
                    android:layout_marginStart="77dp"
                    android:layout_toEndOf="@+id/subject1"
                    android:layout_toRightOf="@+id/subject1"
                    android:src="@drawable/jacopopregnolato" />
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
